<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz_title">Awesome Quiz</string>
    <string name="q1">Q1. Which is the animal referred as the ship of the desert?</string>
    <string name="q1_hint">Write your answer</string>
    <string name="q2">Q2. Which is the heavier metal of these two? Gold or Silver?</string>
    <string name="q2_a">Gold</string>
    <string name="q2_b">Silver</string>
    <string name="q3">Q3. Which is the hottest place in the earth?</string>
    <string name="q3_a">Ethiopia</string>
    <string name="q3_b">Amritsar</string>
    <string name="q4">Q4. What is the capital of India?</string>
    <string name="q4_a">Delhi</string>
    <string name="q4_b">Nayi Dilli BC</string>
    <string name="q5">Q5. Which is the nearest star to planet earth?</string>
    <string name="q5_a">Proxima Centuri</string>
    <string name="q5_b">Sun</string>
    <string name="submit">Submit</string>

</resources>
