<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="monospace"
            android:gravity="center_horizontal"
            android:text="@string/quiz_title"
            android:textAllCaps="true"
            android:textSize="42sp" />

        <!-- Question 1 -->

        <TextView
            style="@style/custom_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q1" />


        <EditText
            android:id="@+id/q1"
            style="@style/custom_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/q1_hint"
            android:inputType="textCapSentences" />

        <!-- Question 2 -->

        <TextView
            style="@style/custom_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q2" />

        <RadioGroup
            style="@style/custom_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/q2_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/q2_a"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/q2_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/q2_b"
                android:textSize="24sp" />

        </RadioGroup>

        <!--Question 3 -->

        <TextView
            style="@style/custom_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q3" />

        <RadioGroup
            style="@style/custom_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/q3_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/q3_a"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/q3_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/q3_b"
                android:textSize="24sp" />

        </RadioGroup>

        <!-- Question 4-->


        <TextView
            style="@style/custom_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q4" />

        <LinearLayout
            style="@style/custom_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/q4_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/q4_a"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/q4_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/q4_b"
                android:textSize="24sp" />

        </LinearLayout>

        <!-- Question 5 -->

        <TextView
            style="@style/custom_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q5" />

        <RadioGroup
            style="@style/custom_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/q5_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/q5_a"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/q5_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/q5_b"
                android:textSize="24sp" />

        </RadioGroup>

        <Button
            style="@style/custom_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:onClick="computeResults"
            android:text="@string/submit" />

    </LinearLayout>


</ScrollView>